--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
   ],
   "dependencies": {
     "@iarna/toml": "^2.2.5",
-    "@raycast/api": "^1.69.2"
+    "@raycast/api": "^1.69.2",
+    "@raycast/utils": "^1.15.0"
   },
   "devDependencies": {
     "@raycast/eslint-config": "^1.0.6",
